# caw

./: .gitignore  .goreleaser.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
branding/: README.md  brand-guide.md
branding/copy/: messaging.md
branding/logos/: caw-terminal-mark.txt
branding/tokens/: caw.css  caw.tokens.json  ratatui_palette.rs
crates/caw/: Cargo.toml
crates/caw-app/: Cargo.toml
crates/caw-app/src/: lib.rs  main.rs  tray.rs  ws.rs
crates/caw-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/caw-app/src-tauri/capabilities/: default.json
crates/caw-app/src-tauri/src/: commands.rs  lib.rs  tray.rs
crates/caw-cli/: Cargo.toml
crates/caw-cli/src/: app.rs  main.rs  ui.rs
crates/caw-core/: Cargo.toml
crates/caw-core/src/: error.rs  focus.rs  lib.rs  monitor.rs  plugin.rs  process.rs  registry.rs  types.rs
crates/caw-plugin-claude/: Cargo.toml
crates/caw-plugin-claude/src/: debug.rs  lib.rs  process.rs  session.rs
crates/caw-plugin-codex/: Cargo.toml
crates/caw-plugin-codex/src/: lib.rs  session.rs
crates/caw-plugin-opencode/: Cargo.toml
crates/caw-plugin-opencode/src/: lib.rs
crates/caw/icons/: caw.icns
crates/caw/macos/: Info.plist
crates/caw/src/: autostart.rs  main.rs  palette.rs  tray.rs  ui.rs
docs/superpowers/plans/: 2026-03-25-remove-tauri.md
scripts/: package.sh  update-homebrew.sh
ui/: index.html  package-lock.json
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: CrowIcon.tsx  EmptyState.tsx  FilterBar.tsx  Header.tsx  PluginFilter.tsx  ProjectGroup.tsx  SessionCard.tsx  SessionRow.tsx  SessionTable.tsx  StatusBar.tsx  StatusDot.tsx
ui/src/hooks/: useGroupedSessions.ts  useWebSocket.ts
ui/src/lib/: format.ts
