[workspace]
resolver = "2"
members = [
    "crates/caw-core",
    "crates/caw-plugin-claude",
    "crates/caw-plugin-codex",
    "crates/caw-plugin-opencode",
    "crates/caw",
]

[workspace.package]
version = "0.0.7"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
anyhow = "1"
dirs = "6"
sysinfo = "0.33"
