[package]
name = "caw-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "caw"
path = "src/main.rs"

[dependencies]
caw-core = { path = "../caw-core" }
caw-plugin-claude = { path = "../caw-plugin-claude" }
caw-plugin-codex = { path = "../caw-plugin-codex" }
caw-plugin-opencode = { path = "../caw-plugin-opencode" }
tray-icon = "0.21"
muda = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSEvent"] }
objc2-foundation = "0.3"
