[package]
name = "caw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "caw"
path = "src/main.rs"

[dependencies]
caw-core = { path = "../caw-core" }
caw-plugin-claude = { path = "../caw-plugin-claude" }
caw-plugin-codex = { path = "../caw-plugin-codex" }
caw-plugin-opencode = { path = "../caw-plugin-opencode" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
