[package]
name = "caw-plugin-opencode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caw-core = { path = "../caw-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
