[package]
name = "caw"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "caw"
path = "src/main.rs"

[dependencies]
caw-core = { path = "../caw-core" }
caw-plugin-claude = { path = "../caw-plugin-claude" }
caw-plugin-codex = { path = "../caw-plugin-codex" }
caw-plugin-opencode = { path = "../caw-plugin-opencode" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
tray-icon = "0.21"
muda = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSEvent"] }
objc2-foundation = "0.3"
